Doc/0.1/09-data/01_listbox_ru.md
![RimUI Framework](../../../About/Preview.png)

**RimUI Framework** — ядро `0.7.1` · мод `0.1.0` · RimWorld `1.6`

---

[Оглавление](../index_ru.md) - Данные | Пред.: [Tabs](../08-containers/03_tabs_ru.md) | След.: [OrderList&lt;T&gt;](02_orderlist_ru.md) | [English](01_listbox_en.md)

---

# ListBox&lt;T&gt;

Список: клик по строке выбирает её, Ctrl+клик добавляет или убирает строку из выбора, Shift+клик
выбирает диапазон между двумя кликами, а на двойной клик можно назначить своё действие.

`RimUI.Components.ListBox<T> : UiElement` (generic, не sealed)

## Пример

```csharp
var lb = new ListBox<string> { Style = { Height = 170f } };
lb.Items.AddRange(new[] { "Готовка", "Стройка", "Растения" });
lb.OnSelect = i => { /* индекс строки, -1 при снятии выбора */ };
lb.OnActivate = i => { /* двойной клик */ };
```

## Параметры

| Параметр | Тип | По умолчанию | Описание |
|---|---|---|---|
| `Items` | `List<T>` | пусто | Строки списка. |
| `Display` | `Func<T,string>` | `null` (дефолт `item.ToString()`) | Текст строки. |
| `OnSelect` | `Action<int>` | `null` | Колбэк выбора строки. |
| `OnActivate` | `Action<int>` | `null` | Колбэк двойного клика. |
| `RowHeight` | `float` | `24` | Высота строки. |
| `Disabled` | `bool` | `false` | Отключённое состояние. |

Мультивыбор: Ctrl+клик — тоггл в наборе выбранных; Shift+клик — диапазон от якоря последнего
клика.

### Точная механика якоря (Anchor) и модификаторов

- **Якорь** (`Anchor`) обновляется ТОЛЬКО обычным кликом без модификаторов или Ctrl+кликом; сам
  Shift+клик якорь никогда не меняет. Это позволяет делать серию Shift-кликов подряд, каждый раз
  пересчитывая диапазон от одного и того же исходного якоря — как в проводнике ОС.
- Если Shift+клик происходит ДО того, как якорь вообще был установлен (`Anchor == -1`, ничего не
  выбирали) — он молча превращается в обычный одиночный клик (выбирается только кликнутая строка,
  диапазона нет), и именно эта строка становится новым якорем для последующих Shift-кликов.
- Ctrl+клик тоглит СТРОГО ТОЛЬКО кликнутую строку — остальные элементы набора выбора не
  трогаются. При снятии выбора Ctrl+кликом «последняя активная» строка (`Selected`, используется
  одиночным API) становится `-1`, даже если в наборе остались другие выбранные строки.
- Двойной клик (порог между кликами) обрабатывается на уровне `ListBox` и переиспользуется во
  всех компонентах, построенных на нём (`OrderList`, `PickList`).

## Стили

Слоты: `list/frame`, `list/row`, `list/row_disabled`, `list/row_hover`, `list/row_selected`,
`list/scrollbar`.

## Методы

Явного публичного конструктора с параметрами нет — только беспараметрический `ListBox<T>()`.
Служит внутренним строительным блоком для `OrderList`/`PickList` (см. соответствующие страницы).

| Метод | Возвращает | Описание |
|---|---|---|
| `GetSelected()` | `int` | Индекс текущей активной строки (`-1` = ничего не выбрано; до первого показа — `-1`). |
| `SetSelected(int index)` | `void` | Программно выбрать строку по индексу (как клик; `-1` — снять выбор): пишет во внутреннее состояние и вызывает `OnSelect`; эффект — со следующего кадра. |
| `SetStyle(string path, string value)` | `void` | Установить поле стиля строкой (`"text.color"`, `"background"`...); именованных частей у `ListBox` нет — путь применяется к корневому `Style` целиком. Неизвестный путь/значение — молча игнорируется. |

## События

| Событие | Тип | Параметры | Когда вызывается |
|---|---|---|---|
| `OnSelect` | `Action<int>` | индекс строки (`-1` при снятии выбора) | Клик по строке. |
| `OnActivate` | `Action<int>` | индекс строки | Двойной клик по строке. |
| `Events.HoverEnter` / `Events.HoverLeave` | `UiEventHandler` | `data.MousePosition` | Курсор вошёл/покинул границы (по разу на переход). |
| `Events.Hover` | `UiEventHandler` | `data.MousePosition` | Курсор над элементом — КАЖДЫЙ КАДР (~60 раз/сек). Тяжёлый обработчик просадит FPS — только лёгкая логика, без аллокаций/поиска/IO. |
| `Events.Click` / `Events.RightClick` | `UiEventHandler` | `data.MousePosition` | ЛКМ / ПКМ по элементу. |
| `Events.Scroll` | `UiEventHandler` | `data.ScrollDelta` | Колесо мыши над элементом. |
| `Events.DisabledChanged` | `UiEventHandler` | `data.Disabled` | Изменилась эффективная активность. |
| `Events.SelectionChanged` | `UiEventHandler` | `data.SelectedIndex` (индекс строки, `-1` при снятии), `data.SelectedValue` (сам элемент `T` или `null`) | Клик по строке — после собственной логики выбора и `OnSelect`. |

## Поддержка механик

| Механика | Поддержка | Пояснение |
|---|---|---|
| Стиль | Да | Слоты `list/*`. |
| Спрайт-рамка | Да | `list/frame`. |
| Анимация | Да | Общий механизм `Style.Animation`. |
| Disabled | Да | Свой стиль строк, клики блокируются. |
| Hover-fade | Нет | Наведение на строку — обычный `HoverOn`, без плавного перехода. |


---

[Оглавление](../index_ru.md) - Данные | Пред.: [Tabs](../08-containers/03_tabs_ru.md) | След.: [OrderList&lt;T&gt;](02_orderlist_ru.md) | [English](01_listbox_en.md)

## Поддержать автора
Если тебе нравится RimUI Framework, можешь поддержать разработку:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Спасибо! ❤️
